Fixed navbar overlapping, changed airbnb page styling

--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -8,6 +8,7 @@
   padding-left: 20px; 
   display: flex;
   justify-content: space-evenly;
+  z-index: 2;
 }
 
 .nav-link {
