--- a/client/src/components/airbnbsPage/airbnbsPage.css
+++ b/client/src/components/airbnbsPage/airbnbsPage.css
@@ -56,8 +56,8 @@
 
 .carousel .slide img {
   width: 100%;
-  max-height: 200px;
-  max-width: 300px;
+  max-height: 250px;
+  max-width: 500px;
   object-fit: cover;
 }
 
@@ -103,6 +103,5 @@
 .control-prev {
   left: 32% !important;
 }
-
 
 
